fix queue size bug on mac

--- a/notebooks/animator_example.ipynb
+++ b/notebooks/animator_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "bd9e0112-3534-4954-8f30-f7ef56f57d49",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "9e0af22c-b9fc-4239-8ac9-c94b320439ab",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "eb2952c8-04b9-43e0-b2d6-c71dfd992e26",
    "metadata": {},
    "outputs": [],
@@ -46,10 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "6992526c-8d1b-4d93-acab-862549c69bd8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "animated_artists:  [<matplotlib.lines.Line2D object at 0x137fd3640>, Text(10, -10, '0'), <matplotlib.lines.Line2D object at 0x137fd39a0>, <matplotlib.lines.Line2D object at 0x137fd3d60>]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jonahpearl/Documents/PiN/Datta_lab/Local_code/mpl_serial_to_oscope/src/mplserialscope/animate.py:307: UserWarning: Queue size is not readable on this platform\n",
+      "  warn(\"Queue size is not readable on this platform\")\n"
+     ]
+    }
+   ],
    "source": [
     "thermistor_animator = MPLAnimator(\n",
     "    n_samples_to_show, \n",
@@ -82,6 +98,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fadad49b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -100,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
